<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="48sp"
        android:background="@color/light_gray"
        android:gravity="bottom|end"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/white">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_7"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_8"
            android:onClick="onDigit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_9"
            android:onClick="onDigit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Divide"
            android:onClick="onOperator"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/white">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:onClick="onDigit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:onClick="onDigit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiplication"
            android:onClick="onOperator"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/white">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:onClick="onDigit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:onClick="onDigit"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:onClick="onOperator"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/white">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:onClick="onDecimalPoint"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clr"
            android:onClick="onClear"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/addition"
            android:onClick="onOperator"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/white">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:onClick="onEqual"
            android:layout_weight="1"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            tools:ignore="UsingOnClickInXml"/>


    </LinearLayout>

  </LinearLayout>